# markdown-docs-compiler

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  converter.py  file_utils.py  generator.py  git_utils.py  mise.toml  push-on-github.sh  pyproject.toml
.github/workflows/: release.yml  test.yml
scripts/: build_site_debug.sh  build_site_local.sh
src/knowledge_base_generator/: cli.py  click_preprocessors.py  config.py  converter.py  file_utils.py  generator.py  main.py
src/knowledge_base_generator/static/css/: base.css  knowledge-base.css
src/knowledge_base_generator/templates/: base.html  base_page.html  index.html
src/markdown_docs_compiler/: cli.py  click_preprocessors.py  config.py  converter.py  file_utils.py  main.py
static/css/: base.css  blog.css  knowledge-base.css
templates/: base.html  blog.html  index.html  knowledge-base.html
tests/: test_converter.py
tests/data/: html_doc.html  markdown_doc.md
tools/: build_on_ci_and_public.sh  build_on_local_and_public.sh  local_update_knowledge_base.sh
