[tool.poetry]
name = "knowledge-base-generator"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Alexey Petrunnik <petrunnik.a@gmail.com>"]
packages = [{include = "knowledge_base_generator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
markdown = "^3.3"
pygments = "^2.11"
pymdown-extensions = "^9.3"
jinja2 = "^2.11"
markupsafe = "=2.0.1"  # it pinned for correct work jinja2
click = "^8.1.3"
pydantic = {version = "^1.10.2", extras = ["dotenv"]}

[tool.poetry.dev-dependencies]
pytest = "=7.1.1"
pytest-datadir = "=1.3.1"

[tool.poetry.scripts]
knowledge-base-generator = "knowledge_base_generator.cli:cli"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
pythonpath = ['./src']
testpaths = ["tests"]
