[tool.poetry]
name = "markdown-docs-compiler"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Alexey Petrunnik <petrunnik.a@gmail.com>"]
packages = [{include = "markdown_docs_compiler", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
markdown = "^3.3"
types-markdown = "^3.4.2.1"
pygments = "^2.11"
pymdown-extensions = "^9.3"
jinja2 = "^2.11"
types-jinja2 = "^2.11.9"
markupsafe = "=2.0.1"  # it pinned for correct work jinja2
click = "^8.1.3"
pydantic = {version = "^1.10.2", extras = ["dotenv"]}

[tool.poetry.dev-dependencies]
pytest = "=7.1.1"
pytest-datadir = "=1.3.1"
pre-commit = "^2.20.0"
autopep8 = "^1.6.0"
black = "^22.10.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "=0.991"

[tool.poetry.scripts]
markdown-docs-compiler = "markdown_docs_compiler.cli:cli"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
pythonpath = ['./src']
testpaths = ["tests"]

[tool.black]
target_version = ['py310']
line-length = 100
skip_string_normalization = true

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
disallow_any_generics = true
disallow_untyped_defs = true
